--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,14 @@
 
     <item
         android:id="@+id/action_search"
-        android:title="@string/action_search"
         android:icon="@drawable/ic_search"
-        app:showAsAction="collapseActionView|always" />
+        android:title="@string/action_search"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_about"
+        android:icon="@drawable/ic_about"
+        android:title="@string/action_about"
+        app:showAsAction="ifRoom" />
 
 </menu>
