--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,25 +11,19 @@
         android:id="@+id/cfl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/abl_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:expanded="false">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include layout="@layout/toolbar" />
-
-            <include
-                layout="@layout/search_toolbar"
-                android:visibility="invisible" />
-
-        </FrameLayout>
+        <include layout="@layout/collapsing_toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/search_toolbar"
+        android:visibility="invisible"/>
 
 </android.support.design.widget.CoordinatorLayout>
