--- a/app/src/main/res/layout/genre_item.xml
+++ b/app/src/main/res/layout/genre_item.xml
@@ -12,14 +12,13 @@
     android:layout_marginTop="4dp"
     android:background="@drawable/genre_item_background"
     android:gravity="center"
-    android:paddingBottom="8dp"
-    android:paddingEnd="20dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp"
-    android:paddingStart="20dp"
-    android:paddingTop="8dp"
-    android:text="Genre"
+    android:paddingBottom="6dp"
+    android:paddingEnd="18dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingStart="18dp"
+    android:paddingTop="6dp"
     android:textColor="@android:color/white"
-    android:textSize="12sp"
+    android:textSize="10sp"
     app:layout_flexGrow="1"
-    tools:ignore="HardcodedText" />
+    tools:ignore="SmallSp" />
