--- a/app/src/main/res/layout/suggestion_item.xml
+++ b/app/src/main/res/layout/suggestion_item.xml
@@ -2,56 +2,43 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/search_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?actionBarSize"
-    android:background="@android:color/white"
-    android:clipChildren="false"
-    android:translationZ="10dp">
+    android:layout_height="wrap_content"
+    android:background="@drawable/item_ripple"
+    android:backgroundTint="@android:color/white">
 
     <ImageView
-        android:id="@+id/iv_back"
+        android:id="@+id/iv_history"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/icon_ripple"
-        android:padding="12dp"
-        android:src="@drawable/ic_arrow_back"
+        android:padding="8dp"
+        android:src="@drawable/ic_history"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/et_query"
+        app:layout_constraintEnd_toStartOf="@id/tv_suggestion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
-    <EditText
-        android:id="@+id/et_query"
+    <TextView
+        android:id="@+id/tv_suggestion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:backgroundTint="@android:color/white"
-        android:hint="@string/searchbar_hint"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:textColor="@android:color/black"
-        android:textColorHint="@android:color/darker_gray"
-        android:textCursorDrawable="@drawable/color_cursor"
+        android:layout_marginStart="16dp"
+        android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_clear"
-        app:layout_constraintStart_toEndOf="@id/iv_back"
+        app:layout_constraintStart_toEndOf="@id/iv_history"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_clear"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/icon_ripple"
-        android:padding="12dp"
+        android:padding="8dp"
         android:src="@drawable/ic_clear"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/et_query"
+        app:layout_constraintStart_toEndOf="@id/tv_suggestion"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
