--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
+    android:nestedScrollingEnabled="true"
     tools:context=".ui.fragments.MovieFragment">
 
     <android.support.constraint.ConstraintLayout
@@ -26,6 +26,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/tv_director"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +37,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/tv_writer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/tv_hint_rated"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +61,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="@string/hint_rated"
                 android:textColor="@android:color/holo_red_dark"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_rated"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +75,7 @@
                 android:background="@drawable/rated_item_background"
                 android:gravity="center"
                 android:textColor="@android:color/white"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_hint_rated"
                 app:layout_constraintStart_toEndOf="@id/tv_hint_rated"
                 app:layout_constraintTop_toBottomOf="@id/tv_director"
@@ -83,6 +88,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAlignment="inherit"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/rv_genre"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +96,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_genre"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toTopOf="@id/rv_ratings"
@@ -100,7 +106,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_ratings"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -109,4 +115,4 @@
 
     </android.support.constraint.ConstraintLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</ScrollView>
