animations helper, tutorial and small fixes

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="toolbar_size">?actionBarSize</dimen>
     <integer name="anim_duration_long">500</integer>
 </resources>
