--- a/app/src/main/res/layout/collapsing_toolbar.xml
+++ b/app/src/main/res/layout/collapsing_toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ctl_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:contentScrim="?attr/colorPrimary"
     app:expandedTitleMarginBottom="30dp"
     app:expandedTitleTextAppearance="@style/TextAppearance.Movies.Title.Expanded"
@@ -23,7 +23,7 @@
         android:id="@+id/v_shadow"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
