--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_icon"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:src="@drawable/ic_popcorn"
         app:layout_constraintBottom_toTopOf="@id/tv_version"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
