--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -7,6 +7,18 @@
     android:background="@drawable/item_ripple">
 
     <ImageView
+        android:id="@+id/iv_error"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_broken_image"
+        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
+        app:layout_constraintEnd_toEndOf="@id/iv_poster"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/iv_poster"
+        app:layout_constraintTop_toTopOf="@id/iv_poster"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
         android:id="@+id/iv_poster"
         android:layout_width="80dp"
         android:layout_height="120dp"
