--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -42,13 +42,13 @@
             android:fillColor="#CCCBC6"
             android:pathData="M250.908,262.891c0,-1.916 0.379,-3.741 1.049,-5.418c-2.784,0.306 -5.675,-0.605 -7.81,-2.745l-4.419,-4.441c-1.281,-1.292 -3.037,-2.022 -4.86,-2.022H78.85c-8.075,0 -14.625,6.55 -14.625,14.625v92.259c0,8.075 6.55,14.625 14.625,14.625h157.156c0.375,0 0.729,-0.209 0.917,-0.542l6.473,-19.685c1.193,-3.623 4.352,-5.435 7.511,-5.435L250.908,262.891L250.908,262.891z" />
         <path
-            android:fillColor="#128CA0"
+            android:fillColor="#03a9f4"
             android:pathData="M221.083,283.184v51.675c0,5.258 -4.253,9.51 -9.511,9.51H103.561c-5.258,0 -9.51,-4.253 -9.51,-9.51v-51.675c0,-5.258 4.253,-9.51 9.51,-9.51h108.012C216.83,273.672 221.083,277.925 221.083,283.184z" />
         <path
             android:fillColor="#ED3124"
             android:pathData="M407.767,283.184v51.675c0,5.258 -4.253,9.51 -9.511,9.51H290.245c-5.258,0 -9.51,-4.253 -9.51,-9.51v-51.675c0,-5.258 4.253,-9.51 9.51,-9.51h108.012C403.514,273.672 407.767,277.925 407.767,283.184z" />
         <path
-            android:fillColor="#00818E"
+            android:fillColor="#036c99"
             android:pathData="M211.572,273.672H103.561c-5.253,0 -9.511,4.259 -9.511,9.511v5.567h57.298c30.718,0 55.619,24.901 55.619,55.619l0,0h4.605c5.253,0 9.51,-4.259 9.51,-9.51v-51.675C221.083,277.931 216.825,273.672 211.572,273.672z" />
         <path
             android:fillColor="#E00E0E"
