--- a/app/src/main/res/layout/collapsing_toolbar.xml
+++ b/app/src/main/res/layout/collapsing_toolbar.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:id="@+id/iv_poster"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="400dp"
         android:fitsSystemWindows="true"
         android:scaleType="centerCrop"
         app:layout_collapseMode="parallax"
@@ -21,6 +21,8 @@
 
     <View
         android:id="@+id/v_shadow"
+        app:layout_collapseMode="parallax"
+        app:layout_collapseParallaxMultiplier="0.2"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_gravity="bottom" />
