--- a/app/src/main/res/layout/collapsing_toolbar.xml
+++ b/app/src/main/res/layout/collapsing_toolbar.xml
@@ -21,11 +21,12 @@
 
     <View
         android:id="@+id/v_shadow"
-        app:layout_collapseMode="parallax"
-        app:layout_collapseParallaxMultiplier="0.2"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_gravity="bottom" />
+        android:layout_gravity="bottom"
+        android:background="@drawable/collapsed_image_background"
+        app:layout_collapseMode="parallax"
+        app:layout_collapseParallaxMultiplier="0.5" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
