--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:nestedScrollingEnabled="true"
-        >
+        android:visibility="gone">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/cl_movie_info"
